# mente

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  aria  index.html  install.sh  mente  mkdocs.yml  mypy.ini  objects.inv  pyproject.toml  ruff.toml  sitemap.xml
.aria-hub/: latent.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml
architecture/: index.html
assets/: demo.tape
docs/: architecture.md  extending.md  faq.md  federation.md  index.md  launch-post.md  performance.md
docs/assets/: demo.tape
docs/reference/: bus.md  discovery.md  embeddings.md  index.md  memory.md  reasoners.md  router.md  runtime.md  synthesis.md  tools.md  types.md  verifier.md
docs/tutorials/: build-an-agent.md  quickstart.md
docs/tutorials/_snippets/: journal_agent.py
examples/: README.md  coding_agent.py  personal_org.py  research_agent.py
extending/: index.html
faq/: index.html
federation/: index.html
launch-post/: index.html
performance/: index.html
reference/: index.html
reference/bus/: index.html
reference/discovery/: index.html
reference/embeddings/: index.html
reference/memory/: index.html
reference/reasoners/: index.html
reference/router/: index.html
reference/runtime/: index.html
reference/synthesis/: index.html
reference/tools/: index.html
reference/types/: index.html
reference/verifier/: index.html
scripts/: tcp_bus_test.py
search/: search_index.json
site/: 404.html  objects.inv  sitemap.xml
site/architecture/: index.html
site/extending/: index.html
site/reference/: index.html
site/reference/discovery/: index.html
site/reference/embeddings/: index.html
site/reference/reasoners/: index.html
site/reference/router/: index.html
site/reference/runtime/: index.html
site/reference/synthesis/: index.html
site/reference/tools/: index.html
src/aria/: __init__.py  cli.py  config.py  consolidator.py  curiosity.py  embeddings.py  llm.py  logging.py  memory.py  metacog.py  reasoners.py  router.py  runtime.py  self_model.py  specialists.py  synthesis.py  transport.py  types.py  verifier.py
src/aria/embedders/: voyage.py
src/aria/specialists/: __init__.py  code.py  math.py
src/aria/synthesizers/: __init__.py  llm.py  template.py
src/aria/verifiers/: __init__.py  composite.py  heuristic.py  types.py
src/mente/: __init__.py  bus.py  cli.py  config.py  consolidator.py  curiosity.py  discovery.py  embeddings.py  llm.py  llm_ollama.py  logging.py  memory.py  metacog.py  reasoners.py  resilience.py  router.py  runtime.py  self_model.py  state.py  synthesis.py  tools.py  transport.py  verifier.py  world_model.py
src/mente/embedders/: __init__.py  hashing.py  local.py  voyage.py
src/mente/specialists/: __init__.py  code.py  math.py
src/mente/synthesizers/: __init__.py  llm.py  template.py
src/mente/verifiers/: __init__.py  baseline.py  composite.py  heuristic.py  trained.py  types.py
tests/: conftest.py  test_config.py  test_consolidator_robustness.py  test_examples_importable.py  test_logging.py  test_memory_summarize.py  test_resilience.py
tests/advanced/: conftest.py  test_cli.py  test_consolidator.py  test_curiosity.py  test_discovery.py  test_federated_cli.py  test_federation_multi.py  test_runtime.py  test_runtime_shutdown.py  test_self_model.py
tests/cognition/: conftest.py  test_embeddings.py  test_llm.py  test_llm_ollama.py  test_metacog.py  test_reasoners.py  test_router.py  test_specialists.py  test_synthesis.py  test_verifier.py
tests/core/: test_bus.py  test_memory.py  test_state.py  test_tools.py  test_transport.py  test_types.py  test_world_model.py
tests/embedders/: test_hashing.py  test_local.py  test_voyage.py
tests/fixtures/: advanced_helpers.py  cognition_helpers.py  core_events.py  core_net.py  fake_llm.py
tests/specialists/: conftest.py  test_code_specialist.py
tests/synthesizers/: conftest.py  test_library_reload.py  test_llm.py  test_template.py
tests/verifiers/: conftest.py  test_baseline.py  test_composite.py  test_heuristic.py  test_trained.py
tutorials/_snippets/: journal_agent.py
tutorials/build-an-agent/: index.html
tutorials/quickstart/: index.html
