[project]
name = "aria"
version = "0.1.0"
description = "Seed of a persistent, heterogeneous, event-driven reasoning process."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
llm = ["anthropic>=0.40.0"]
docs = ["mkdocs>=1.6", "mkdocs-material>=9.5", "mkdocstrings[python]>=0.25"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aria"]

[project.scripts]
aria = "aria.cli:main"
