[project]
name = "mente"
version = "0.1.0"
description = "Seed of a persistent, heterogeneous, event-driven reasoning process."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "Jasper Reed", email = "jaspermreed@gmail.com"}]
keywords = [
    "agent",
    "ai",
    "llm",
    "framework",
    "cognitive-architecture",
    "event-driven",
    "python",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    "Framework :: AsyncIO",
]
dependencies = []

[project.optional-dependencies]
llm = ["anthropic>=0.40.0"]
embeddings = ["voyageai>=0.2"]
embeddings-local = ["sentence-transformers>=3.0"]
docs = ["mkdocs>=1.6", "mkdocs-material>=9.5", "mkdocstrings[python]>=0.25"]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[project.urls]
Homepage = "https://jspwrd.github.io/mente/"
Repository = "https://github.com/jspwrd/mente"
Issues = "https://github.com/jspwrd/mente/issues"
Documentation = "https://jspwrd.github.io/mente/"
Changelog = "https://github.com/jspwrd/mente/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mente"]
# py.typed (PEP 561) is included via the packages glob above

[project.scripts]
mente = "mente.cli:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["mente"]

[tool.mypy]
python_version = "3.11"
# Launch posture: lint-level type checks (catches obvious bugs, doesn't
# demand full annotation coverage). Ratchet toward strict=true module by
# module; track progress in ROADMAP.md.
explicit_package_bases = true
mypy_path = "src"
namespace_packages = true
no_implicit_optional = true
warn_redundant_casts = true
# Tightening plan (enable per module as they're cleaned up):
#   check_untyped_defs = true
#   warn_unused_ignores = true
#   disallow_untyped_defs = true
#   strict = true

[[tool.mypy.overrides]]
module = "anthropic.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "voyageai.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sentence_transformers.*"
ignore_missing_imports = true

# Modules cleaned up to strict mypy. Add entries here as they're polished
# (see ROADMAP.md "Type-check ratchet").
[[tool.mypy.overrides]]
module = ["mente.types", "mente.state", "mente.self_model", "mente.runtime", "mente.synthesis", "mente.transport", "mente.discovery"]
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
